feat(oauth): Complete JWKS caching and Prometheus metrics implementation
Implement comprehensive OAuth system with JWKS caching and observability:

**JWKS Cache & Performance (Tasks 10-13)**
- Add JWKSCache service with Redis-backed caching (24h TTL)
- Integrate JWKS caching into Apple and Google OAuth providers
- Implement optional cache injection via factory pattern
- Register JWKS cache in application startup for all requests

**Prometheus Observability (Task 15)**
- Create oauth_metrics module with 8 counters, 4 histograms, 2 gauges
- Track token exchanges, link/unlink, state validation, ID token verification
- Monitor JWKS cache hit/miss rates and fetch latency
- Record provider-specific API response times
- Add helper functions for easy metric recording

**Handler Integration**
- Inject JWKS cache into authorize, link_provider handlers
- Record metrics for all OAuth operations and error cases
- Track new user creation via OAuth by provider
- Monitor token exchange duration and success rates

**Security & Features**
- PKCE code challenge/verifier for enhanced OAuth security
- Encrypted token storage with AES-256-GCM + authentication
- State parameter CSRF protection with Redis TTL
- Automatic token refresh background job
- Support for Apple, Google, Facebook OAuth providers

All changes compile successfully with zero errors.

--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,31 @@ NEO4J_ENABLED=false
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=neo4j
+
+# ============================================
+# OAuth Token Encryption
+# ============================================
+# IMPORTANT: Generate a 256-bit (32-byte) base64-encoded key for token encryption
+# You can generate one with: openssl rand 32 | base64
+# For production, use AWS KMS or HashiCorp Vault instead of environment variables
+OAUTH_TOKEN_ENCRYPTION_KEY=
+
+# ============================================
+# OAuth Providers Configuration
+# ============================================
+# Google OAuth 2.0
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost:3000/auth/callback/google
+
+# Apple Sign in with Apple
+APPLE_CLIENT_ID=
+APPLE_TEAM_ID=
+APPLE_KEY_ID=
+APPLE_KEY_PATH=./apple_key.p8
+APPLE_REDIRECT_URI=http://localhost:3000/auth/callback/apple
+
+# Facebook Graph API
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_REDIRECT_URI=http://localhost:3000/auth/callback/facebook
