--- a/backend/user-service/Cargo.toml
+++ b/backend/user-service/Cargo.toml
@@ -59,6 +59,7 @@ sha2.workspace = true
 hex.workspace = true
 mime.workspace = true
 base64.workspace = true
+aes-gcm.workspace = true
 rdkafka.workspace = true
 async-trait.workspace = true
 reqwest.workspace = true
