chore: update client libraries, dependencies, and deployment configuration
Comprehensive update to client libraries and infrastructure to support
new microservices architecture and gRPC communication.

Dependency updates:
- tokio-tungstenite: WebSocket stability
- tonic/tonic-build: gRPC support across services
- sqlx with async runtime improvements
- redis: ConnectionManager and async support
- serde_json: serialization for encrypted payloads

Library updates:
- crypto-core/lib.rs: Enhanced encryption utilities
- Dependencies bumped to latest compatible versions
- Security patches applied to all packages

User service handler updates:
- auth.rs: gRPC client initialization
- events.rs: Event consumer for relationship changes
- relationships.rs: Call content-service for follow operations
- trending.rs: Use gRPC for trending feed
- handlers/mod.rs: Route management for feed proxy

Content service configuration:
- config.rs: Environment-based configuration
- main.rs: gRPC server setup alongside HTTP
- error.rs: Unified error types for gRPC
- handlers: HTTP adapters for gRPC services
- middleware: Request validation and logging

Messaging service configuration:
- config.rs: Encryption and offline queue settings
- state.rs: Redis client pooling
- routes: RESTful API alongside gRPC
- handlers: WebSocket upgrade with auth

iOS client updates:
- PostInteractionService.swift:
  ✓ Updated to call content-service for feed
  ✓ Added gRPC client support
  ✓ Encryption key derivation for messages
  ✓ Offline message handling

- FeedViewModel.swift:
  ✓ Use content-service gRPC endpoint
  ✓ Handle feed pagination with cursors
  ✓ Improved error handling for circuit breaker

- FeedViewModelEnhanced.swift:
  ✓ Advanced caching strategies
  ✓ Prefetch optimizations
  ✓ Memory-efficient pagination

Deployment configuration:
- docker-compose.yml:
  ✓ Added content-service container
  ✓ Updated gRPC port mappings
  ✓ Service discovery configuration
  ✓ Environment variables for all serv

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["backend/user-service", "backend/auth-service"]
+members = ["backend/user-service", "backend/auth-service", "backend/media-service"]
 resolver = "2"
 
 [workspace.package]
@@ -35,6 +35,7 @@ uuid = { version = "1.7", features = ["v4", "v5", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 envy = "0.4"
+hkdf = "0.12"
 
 # Logging
 tracing = "0.1"
