--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -41,6 +41,7 @@ chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 envy = "0.4"
 once_cell = "1.19"
+hkdf = "0.12"
 
 # Logging
 tracing = "0.1"
