--- a/backend/messaging-service/Cargo.toml
+++ b/backend/messaging-service/Cargo.toml
@@ -25,6 +25,9 @@ once_cell = "1.19"
 base64 = { workspace = true }
 tower-http = { version = "0.5", features = ["trace"] }
 utoipa = { workspace = true }
+hmac = { workspace = true }
+sha2 = { workspace = true }
+hkdf = { workspace = true }
 
 [profile.release]
 codegen-units = 1
